couchbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchbase-service
spec:
  selector:
    app: couchbase
  type: NodePort
  ports:
  - name: couchbase
    protocol: TCP
    port: 8091
    targetPort: 8091
  - name: couchbase-memcached
    protocol: TCP
    port: 11210
    targetPort: 11210
