service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config2
spec:
  selector:
    app: config2
  ports:
    - protocol: "TCP"
      port: 8083
      targetPort: 8083
      nodePort: 30080
  type: NodePort
